src/objects/Finance_and_Legal_Docs__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Finance and Legal Docs</relationshipLabel>
        <relationshipName>Finance_and_Legal_Docs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Alliance_BD_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alliance/BD Opportunity</label>
        <referenceTo>Alliance_BD_Opportunity__c</referenceTo>
        <relationshipLabel>Finance and Legal Docs</relationshipLabel>
        <relationshipName>Finance_and_Legal_Docs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>One_Finance_and_Legal_Doc__c</fullName>
        <formula>1</formula>
        <label>One (Finance and Legal Doc)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Agreements__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Agreements</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Opportunity must be an Partner Onboarding Opportunity type</errorMessage>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Partner Onboarding Opportunity</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Finance and Legal Docs</relationshipLabel>
        <relationshipName>Finance_and_Legal_Docs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Choose the opportunity to which this document pertains</inlineHelpText>
        <label>Related Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Finance and Legal Docs (Related Opportunity)</relationshipLabel>
        <relationshipName>Finance_and_Legal_Docs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Finance and Legal Docs</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>One_Finance_and_Legal_Doc__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Finance and Legal Docs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finance and Legal Docs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>